linux-kb-gitops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linux-kb
  namespace: linux-kb
spec:
  type: ClusterIP
  selector:
    app: linux-kb
  ports:
    - name: http
      port: 80
      targetPort: 80
