linux-kb-gitops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linux-kb
  namespace: linux-kb
spec:
  ingressClassName: traefik
  rules:
    - host: kb.zaidlaz.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linux-kb
                port:
                  number: 80

    - host: kb.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linux-kb
                port:
                  number: 80
